--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,13 @@
 # in the templates via {{ site.myvariable }}.
 
 title: 홍문외과의원
-email: your-email@example.com
+email: mk.kansas@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://hongmun.co.kr" # You can add 'https://' if you have SSL set up
 twitter_username: jekyllrb
 github_username:  jekyll
 
